yaml-common/vault-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
  labels:
    app: vaultserver
  name: vault-service
  namespace: vault
spec:
  ports:
  - name: service
    port: 8200 
    protocol: TCP
    targetPort: 8200 
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
  sessionAffinity: None
  type: NodePort
